--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
   "dependencies": {},
   "devDependencies": {
     "auto-reload-brunch": "^2.7.1",
+    "bootstrap-sass": "^3.3.7",
     "brunch": "^2.8.2",
+    "copycat-brunch": "^1.1.0",
     "elm-brunch": "^0.7.0",
     "hmr-brunch": "^0.1.1",
+    "jquery": "^3.2.1",
     "sass-brunch": "^2.6.3"
   }
 }
